--- a/package.json
+++ b/package.json
@@ -27,10 +27,8 @@
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "pdf-lib": "^1.17.1",
-    "sequelize": "^6.37.5",
-    "serverless-http": "^2.7.0",
-    "uuid": "^11.0.2"
+    "pdf-lib": "^1.17.1"
+    
   },
   "devDependencies": {
     "husky": "^7.0.4",
